--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-kiss me
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>kiss</title>
+	<link rel="stylesheet" href="main.css">
+</head>
+<body>
+	kiss me!
+</body>
+</html>
